--- a/FoodBook/src/main/resources/static/html/login.html
+++ b/FoodBook/src/main/resources/static/html/login.html
@@ -1,7 +1,7 @@
 <div ng-cloak ng-controller="LoginController">
 
     <div class="container">
-        <div style="margin-left: 18%" class="carousel-caption col-xs-3">
+        <div style="margin-left: 18%" class="carousel-caption">
             <form role="form">
                 <p><input ng-model="user.email" type="email" class="form-control form-control-lg" placeholder="Enter your email"></p>
                 <p><input ng-model="user.password" type="password" class="form-control form-control-lg" placeholder="Enter your password"></p>
