--- a/FoodBook/src/main/resources/static/html/registerGuest.html
+++ b/FoodBook/src/main/resources/static/html/registerGuest.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Register Guest</title>
-</head>
-<body>
-    <h1>REGISTER GUEST</h1>
-</body>
-</html>
+<div ng-cloak ng-controller="RegisterGuestController">
+    <div class="container">
+        <div class="carousel-caption">
+            <form role="form">
+                <p><input type="text" class="form-control form-control-lg" ng-model="newGuest.name"
+                          placeholder="Enter your name"></p>
+                <p><input type="text" class="form-control form-control-lg" ng-model="newGuest.surname"
+                          placeholder="Enter your surname"></p>
+                <p><input type="email" class="form-control form-control-lg" ng-model="newGuest.email"
+                          placeholder="Enter your email"></p>
+                <p><input type="password" class="form-control form-control-lg" ng-model="newGuest.password"
+                          placeholder="Enter your password"></p>
+                <p>
+                    <button type="submit" class="btn btn-primary" ng-click="registerGuest(newGuest)">Register</button>
+                </p>
+            </form>
+        </div>
+    </div>
+</div>
