--- a/FoodBook/src/main/resources/static/index.html
+++ b/FoodBook/src/main/resources/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="foodbookApp">
 <head>
     <meta charset="UTF-8">
     <title>FoodBook</title>
