--- a/FoodBook/src/main/resources/static/html/confirmRegistration.html
+++ b/FoodBook/src/main/resources/static/html/confirmRegistration.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Confirm registration</title>
-</head>
-<body>
-    <h1>CONFIRM REGISTRATION</h1>
-</body>
-</html>
+<div ng-cloak ng-controller="ConfirmRegistrationController">
+    <h2>Confirmation</h2>
+    <div class="container">
+        <div class="carousel-caption">
+            <form role="form">
+                <p><input ng-model="user.email" type="email" class="form-control form-control-lg" placeholder="Enter your email"></p>
+                <p><input ng-model="user.password" type="password" class="form-control form-control-lg" placeholder="Enter your password"></p>
+                <p><button ng-click="confirm(user)" type="submit" class="btn btn-primary btn-md">Confirm</button></p>
+            </form>
+        </div>
+    </div>
+</div>
