--- a/FoodBook/src/main/resources/static/guest/register/registerGuest.html
+++ b/FoodBook/src/main/resources/static/guest/register/registerGuest.html
@@ -1,17 +1,19 @@
-<div ng-cloak ng-controller="RegisterGuestController">
+<div>
     <div class="container">
         <div class="carousel-caption">
-            <form role="form">
+            <form role="form" data-toggle="validator" >
                 <p><input type="text" class="form-control form-control-lg" ng-model="newGuest.name"
                           placeholder="Enter your name"></p>
                 <p><input type="text" class="form-control form-control-lg" ng-model="newGuest.surname"
                           placeholder="Enter your surname"></p>
                 <p><input type="email" class="form-control form-control-lg" ng-model="newGuest.email"
                           placeholder="Enter your email"></p>
-                <p><input type="password" class="form-control form-control-lg" ng-model="newGuest.password"
+                <p><input required id="txtPassword" type="password" class="form-control" ng-model="newGuest.password"
                           placeholder="Enter your password"></p>
+                <p><input required id="txtPasswordConfirm" data-match="#txtPassword" type="password" class="form-control" 
+                          placeholder="Enter your password" data-match-error="Passwords have to be equal"></p>
                 <p>
-                    <button type="submit" class="btn btn-primary" ng-click="registerGuest(newGuest)">Register</button>
+                    <button type="submit" class="btn btn-primary" ng-click="registerGuest()">Register</button>
                 </p>
             </form>
         </div>
