--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -99,6 +99,10 @@
 	<!-- Bidder -->
 	<script src="pages/bidder/profile.js"></script>
     <script src="pages/bidder/home.js"></script>
+    
+    <!-- Bartender -->
+    <script src="pages/bartender/profile.js"></script>
+    <script src="pages/bartender/home.js"></script>
 	
 </body>
 </html>
