--- a/src/main/resources/static/pages/bidder/profile.html
+++ b/src/main/resources/static/pages/bidder/profile.html
@@ -1,1 +1,16 @@
-<h1>BIDDER LANDING PAGE</h1>
+<div>
+
+    <div class="collapse navbar-collapse" ng-controller="bidderProfileController">
+	    <ul class="nav navbar-nav">
+	        <li><a ng-class="{ active: activePageNumber == 0}" ng-click="home()">Početna</a></li>
+	        <li><a ng-class="{ active: activePageNumber == 1}" ng-click="addRestaurant()">Dodaj restoran</a></li>
+	        <li><a ng-class="{ active: activePageNumber == 2}" ng-click="addRestaurantManager()">Dodaj menadžera restorana</a></li>
+	        <li><a ng-class="{ active: activePageNumber == 3}" ng-click="addBidder()">Dodaj ponuđača</a></li>
+	        <li><a ng-class="{ active: activePageNumber == 4}" ng-click="addSysmanager()">Dodaj menadžera sistema</a></li>
+	    </ul>
+	</div>
+
+    <div>
+        <ui-view></ui-view>
+    </div>
+</div>
