--- a/src/main/resources/static/pages/sysmanager/profile.html
+++ b/src/main/resources/static/pages/sysmanager/profile.html
@@ -1,4 +1,4 @@
-<div>
+<!--  <div>
 
     <div class="collapse navbar-collapse" ng-controller="sysmanagerProfileController">
 	    <ul class="nav navbar-nav">
@@ -13,4 +13,39 @@
     <div>
         <ui-view></ui-view>
     </div>
+</div>
+-->
+
+<div>
+	<div ng-controller="sysmanagerProfileController">
+	
+	<uib-tabset justified="true" class="tabs">
+		<uib-tab index="0" heading="Početna" ng-click="home()">
+			<div>
+				<ui-view></ui-view>
+			</div>
+		</uib-tab>
+		<uib-tab index="1" heading="Dodaj restoran" ng-click="addRestaurant()">
+			<div>
+				<ui-view></ui-view>
+			</div>
+		</uib-tab>
+		<uib-tab index="2" heading="Dodaj menadžera restorana" ng-click="addRestaurantManager()">
+			<div>
+				<ui-view></ui-view>
+			</div>
+		</uib-tab>
+		<uib-tab index="3" heading="Dodaj ponuđača" ng-click="addBidder()">
+			<div>
+				<ui-view></ui-view>
+			</div>
+		</uib-tab>
+		<uib-tab index="4" heading="Dodaj menadžera sistema" ng-click="addSysmanager()">
+			<div>
+				<ui-view></ui-view>
+			</div>
+		</uib-tab>
+	</uib-tabset>
+	
+	</div>
 </div>
