--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -34,6 +34,7 @@
     </style>
     
     <link href="pages/guest/assets/guest.css" rel="stylesheet">
+    <link href="css/profile.css" rel="stylesheet">
     
 </head>
 <body>
