Bartender, Waiter, Chef stub pages.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -102,6 +102,21 @@
     <!-- Bartender -->
     <script src="pages/bartender/profile.js"></script>
     <script src="pages/bartender/home.js"></script>
+    <script src="pages/bartender/workSchedule.js"></script>
+    <script src="pages/bartender/orders.js"></script>
+    
+    <!-- Chef -->
+    <script src="pages/chef/profile.js"></script>
+    <script src="pages/chef/home.js"></script>
+    <script src="pages/chef/workSchedule.js"></script>
+    <script src="pages/chef/orders.js"></script>
+    
+    <!-- Waiter -->
+    <script src="pages/waiter/profile.js"></script>
+    <script src="pages/waiter/home.js"></script>
+    <script src="pages/waiter/workSchedule.js"></script>
+    <script src="pages/waiter/restauranRegion/home.js"></script>
+    <script src="pages/waiter/orders.js"></script>
 	
 </body>
 </html>
