--- a/src/main/resources/static/pages/chef/profile.html
+++ b/src/main/resources/static/pages/chef/profile.html
@@ -1,10 +1,10 @@
 <!--  <div>
 
-    <div class="collapse navbar-collapse" ng-controller="bartenderProfileController">
+    <div class="collapse navbar-collapse" ng-controller="chefProfileController">
 	    <ul class="nav navbar-nav">
 	        <li><a ng-class="{ active: activePageNumber == 0}" ng-click="home()">My Profile</a></li>
 	        <li><a ng-class="{ active: activePageNumber == 1}" ng-click="seeWorkSchedule()">My Work Schedule</a></li>
-	    	<li><a ng-class="{ active: activePageNumber == 2}" ng-click="seeOrders()">Orders 4 Me</a></li>
+	        <li><a ng-class="{ active: activePageNumber == 2}" ng-click="seeOrders()">Orders 4 Me</a></li>
 	    </ul>
 	</div>
 
@@ -15,7 +15,7 @@
 -->
 
 <div>
-	<div ng-controller="bartenderProfileController">
+	<div ng-controller="chefProfileController">
 	
 	<uib-tabset justified="true" class="tabs">
 		<uib-tab index="0" heading="My Profile" ng-click="home()">
