--- a/src/main/resources/static/pages/waiter/profile.html
+++ b/src/main/resources/static/pages/waiter/profile.html
@@ -1,10 +1,11 @@
 <!--  <div>
 
-    <div class="collapse navbar-collapse" ng-controller="bartenderProfileController">
+    <div class="collapse navbar-collapse" ng-controller="waiterProfileController">
 	    <ul class="nav navbar-nav">
 	        <li><a ng-class="{ active: activePageNumber == 0}" ng-click="home()">My Profile</a></li>
 	        <li><a ng-class="{ active: activePageNumber == 1}" ng-click="seeWorkSchedule()">My Work Schedule</a></li>
-	    	<li><a ng-class="{ active: activePageNumber == 2}" ng-click="seeOrders()">Orders 4 Me</a></li>
+	        <li><a ng-class="{ active: activePageNumber == 2}" ng-click="seeRestaurantRegion()">My Restaurant Region</a></li>
+	        <li><a ng-class="{ active: activePageNumber == 3}" ng-click="seeOrders()">Orders 4 Me</a></li>
 	    </ul>
 	</div>
 
@@ -15,7 +16,7 @@
 -->
 
 <div>
-	<div ng-controller="bartenderProfileController">
+	<div ng-controller="waiterProfileController">
 	
 	<uib-tabset justified="true" class="tabs">
 		<uib-tab index="0" heading="My Profile" ng-click="home()">
@@ -28,7 +29,12 @@
 				<ui-view></ui-view>
 			</div>
 		</uib-tab>
-		<uib-tab index="2" heading="Orders 4 Me" ng-click="seeOrders()">
+		<uib-tab index="2" heading="My Restaurant Region" ng-click="seeRestaurantRegion()">
+			<div>
+				<ui-view></ui-view>
+			</div>
+		</uib-tab>
+		<uib-tab index="3" heading="Orders 4 Me" ng-click="seeOrders()">
 			<div>
 				<ui-view></ui-view>
 			</div>
