Stubs for Restaurant manager and Bidder front end.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -94,10 +94,21 @@
 	<!-- Restaurant manager -->
 	<script src="pages/manager/profile.js"></script>
     <script src="pages/manager/home.js"></script>
+    <script src="pages/manager/groceries.js"></script>
+    <script src="pages/manager/menu.js"></script>
+    <script src="pages/manager/registerWorker.js"></script>
+    <script src="pages/manager/report.js"></script>
+    <script src="pages/manager/restaurant.js"></script>
+    <script src="pages/manager/setLayout.js"></script>
+    <script src="pages/manager/setTimetable.js"></script>
+    <script src="pages/manager/workers.js"></script>
 
 	<!-- Bidder -->
 	<script src="pages/bidder/profile.js"></script>
     <script src="pages/bidder/home.js"></script>
+    <script src="pages/bidder/overviewBidding.js"></script>
+    <script src="pages/bidder/newBidding.js"></script>
+    <script src="pages/bidder/biddings.js"></script>
     
     <!-- Bartender -->
     <script src="pages/bartender/profile.js"></script>
