--- a/src/main/resources/static/pages/bidder/profile.html
+++ b/src/main/resources/static/pages/bidder/profile.html
@@ -1,16 +1,28 @@
 <div>
-
-    <div class="collapse navbar-collapse" ng-controller="bidderProfileController">
-	    <ul class="nav navbar-nav">
-	        <li><a ng-class="{ active: activePageNumber == 0}" ng-click="home()">Početna</a></li>
-	        <li><a ng-class="{ active: activePageNumber == 1}" ng-click="addRestaurant()">Dodaj restoran</a></li>
-	        <li><a ng-class="{ active: activePageNumber == 2}" ng-click="addRestaurantManager()">Dodaj menadžera restorana</a></li>
-	        <li><a ng-class="{ active: activePageNumber == 3}" ng-click="addBidder()">Dodaj ponuđača</a></li>
-	        <li><a ng-class="{ active: activePageNumber == 4}" ng-click="addSysmanager()">Dodaj menadžera sistema</a></li>
-	    </ul>
+	<div ng-controller="bidderProfileController">
+	
+	<uib-tabset justified="true" class="tabs">
+		<uib-tab index="0" heading="Početna" ng-click="home()">
+			<div>
+				<ui-view></ui-view>
+			</div>
+		</uib-tab>
+		<uib-tab index="1" heading="Nova ponuda" ng-click="newBidding()">
+			<div>
+				<ui-view></ui-view>
+			</div>
+		</uib-tab>
+		<uib-tab index="2" heading="Pregled ponuda" ng-click="overview()">
+			<div>
+				<ui-view></ui-view>
+			</div>
+		</uib-tab>
+		<uib-tab index="3" heading="Sve ponude" ng-click="biddings()">
+			<div>
+				<ui-view></ui-view>
+			</div>
+		</uib-tab>
+	</uib-tabset>
+	
 	</div>
-
-    <div>
-        <ui-view></ui-view>
-    </div>
 </div>
