Restaurant location display.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -126,8 +126,16 @@
     <script src="pages/waiter/profile.js"></script>
     <script src="pages/waiter/home.js"></script>
     <script src="pages/waiter/workSchedule.js"></script>
-    <script src="pages/waiter/restauranRegion/home.js"></script>
+    <script src="pages/waiter/restaurantRegion/home.js"></script>
     <script src="pages/waiter/orders.js"></script>
 	
+
+    <!-- http://ngmap.github.io/ -->
+    <script src="libs/ng-map.min.js"></script>
+	<!-- Google Maps -->
+	<script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnA19_HbNym_I5TEyfhssUkUiQzb2mPEA">
+    </script> 
+    
 </body>
 </html>
