--- a/src/main/resources/static/pages/manager/home.html
+++ b/src/main/resources/static/pages/manager/home.html
@@ -1,3 +1,7 @@
+<div class="container-fluid">
+
+<div class="row">
+
 <div class="col-md-8 col-lg-8 columns form">
 
     <form novalidate name="registerForm">
@@ -33,4 +37,7 @@
         
     </form>
 
+</div>
+
+</div>
 </div>
