Worker registration, service revisit.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -86,7 +86,6 @@
     <!-- System manager -->
     <script src="pages/sysmanager/profile.js"></script>
     <script src="pages/sysmanager/home.js"></script>
-    <script src="pages/sysmanager/addBidder.js"></script>
     <script src="pages/sysmanager/addRestaurant.js"></script>
     <script src="pages/sysmanager/addRestaurantManager.js"></script>
     <script src="pages/sysmanager/addSystemManager.js"></script>
@@ -102,6 +101,7 @@
     <script src="pages/manager/setLayout.js"></script>
     <script src="pages/manager/setTimetable.js"></script>
     <script src="pages/manager/workers.js"></script>
+    <script src="pages/manager/addBidder.js"></script>
 
 	<!-- Bidder -->
 	<script src="pages/bidder/profile.js"></script>
