Service review, constructor sets workers as active, but pswd not.

--- a/src/main/resources/static/pages/manager/profile.html
+++ b/src/main/resources/static/pages/manager/profile.html
@@ -42,7 +42,12 @@
 				<ui-view></ui-view>
 			</div>
 		</uib-tab>
-		<uib-tab active="tabs[8].active" heading="Izveštaj" ng-click="report()">
+		<uib-tab active="tabs[8].active" heading="Registruj ponuđača" ng-click="addBidder()">
+			<div>
+				<ui-view></ui-view>
+			</div>
+		</uib-tab>
+		<uib-tab active="tabs[9].active" heading="Izveštaj" ng-click="report()">
 			<div>
 				<ui-view></ui-view>
 			</div>
