--- a/src/main/resources/static/pages/waiter/home.html
+++ b/src/main/resources/static/pages/waiter/home.html
@@ -22,7 +22,7 @@
         </div>
         <div class="form-group">
             <label for="inputWaiterMail">Mail</label>
-            <input type="text" required ng-model="user.mail" id="inputWaiterMail" class="form-control">
+            <input type="text" required ng-model="user.email" id="inputWaiterMail" class="form-control">
         </div>
         <div class="form-group">
             <label for="inputWaiterDressSize">Konfekcijski broj</label>
