Changed input type. Changing password - stub.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -115,12 +115,14 @@
     <script src="pages/bartender/home.js"></script>
     <script src="pages/bartender/workSchedule.js"></script>
     <script src="pages/bartender/orders.js"></script>
+    <script src="pages/bartender/changePassword.js"></script>
     
     <!-- Chef -->
     <script src="pages/chef/profile.js"></script>
     <script src="pages/chef/home.js"></script>
     <script src="pages/chef/workSchedule.js"></script>
     <script src="pages/chef/orders.js"></script>
+    <script src="pages/chef/changePassword.js"></script>
     
     <!-- Waiter -->
     <script src="pages/waiter/profile.js"></script>
@@ -128,6 +130,7 @@
     <script src="pages/waiter/workSchedule.js"></script>
     <script src="pages/waiter/restaurantRegion/home.js"></script>
     <script src="pages/waiter/orders.js"></script>
+    <script src="pages/waiter/changePassword.js"></script>
 	
 
     <!-- http://ngmap.github.io/ -->
