--- a/src/main/resources/static/pages/bartender/home.html
+++ b/src/main/resources/static/pages/bartender/home.html
@@ -14,23 +14,23 @@
       	</div>
       	<div class="form-group">
             <label for="inputBartenderSurname">Prezime</label>
-            <input type="text" required ng-model="user.surname" id="inputBartenderSurname" class="form-control">
+            <input type="text" required ng-model="user.surname" required id="inputBartenderSurname" class="form-control">
         </div>
         <div class="form-group">
             <label for="inputBartenderAddress">Adresa</label>
-            <input type="text" required ng-model="user.address" id="inputBartenderAddress" class="form-control">
+            <input type="text" required ng-model="user.address" required id="inputBartenderAddress" class="form-control">
         </div>
         <div class="form-group">
             <label for="inputBartenderMail">Mail</label>
-            <input type="text" required ng-model="user.email" id="inputBartenderMail" class="form-control">
+            <input type="text" required ng-model="user.email" required id="inputBartenderMail" class="form-control">
         </div>
         <div class="form-group">
             <label for="inputBartenderDressSize">Konfekcijski broj</label>
-            <input type="text" required ng-model="user.dressSize" id="inputBartenderDressSize" class="form-control">
+            <input type="number" required ng-model="user.dressSize" required id="inputBartenderDressSize" class="form-control">
         </div>
         <div class="form-group">
             <label for="inputBartenderShoeSize">Broj obuće</label>
-            <input type="text" required ng-model="user.shoeSize" id="inputBartenderShoeSize" class="form-control">
+            <input type="number" required ng-model="user.shoeSize" required id="inputBartenderShoeSize" class="form-control">
         </div>
         <!--  
       	<div class="form-group">
