--- a/src/main/resources/static/pages/chef/home.html
+++ b/src/main/resources/static/pages/chef/home.html
@@ -26,11 +26,11 @@
         </div>
         <div class="form-group">
             <label for="inputChefDressSize">Konfekcijski broj</label>
-            <input type="text" required ng-model="user.dressSize" id="inputChefDressSize" class="form-control">
+            <input type="number" required ng-model="user.dressSize" id="inputChefDressSize" class="form-control">
         </div>
         <div class="form-group">
             <label for="inputChefShoeSize">Broj obuće</label>
-            <input type="text" required ng-model="user.shoeSize" id="inputChefShoeSize" class="form-control">
+            <input type="number" required ng-model="user.shoeSize" id="inputChefShoeSize" class="form-control">
         </div>
         <!--  
       	<div class="form-group">
