--- a/src/main/resources/static/pages/waiter/home.html
+++ b/src/main/resources/static/pages/waiter/home.html
@@ -26,11 +26,11 @@
         </div>
         <div class="form-group">
             <label for="inputWaiterDressSize">Konfekcijski broj</label>
-            <input type="text" required ng-model="user.dressSize" id="inputWaiterDressSize" class="form-control">
+            <input type="number" required ng-model="user.dressSize" id="inputWaiterDressSize" class="form-control">
         </div>
         <div class="form-group">
             <label for="inputWaiterShoeSize">Broj obuće</label>
-            <input type="text" required ng-model="user.shoeSize" id="inputWaiterShoeSize" class="form-control">
+            <input type="number" required ng-model="user.shoeSize" id="inputWaiterShoeSize" class="form-control">
         </div>
         <!--  
       	<div class="form-group">
