Bartender change pw stub.

--- a/src/main/resources/static/pages/waiter/profile.html
+++ b/src/main/resources/static/pages/waiter/profile.html
@@ -19,22 +19,22 @@
 	<div ng-controller="waiterProfileController">
 	
 	<uib-tabset justified="false" class="tabs">
-		<uib-tab index="0" heading="Početna" ng-click="home()">
+		<uib-tab active="tabs[0].active" heading="Početna" ng-click="home()">
 			<div>
 				<ui-view></ui-view>
 			</div>
 		</uib-tab>
-		<uib-tab index="1" heading="Radni kalendar" ng-click="seeWorkSchedule()">
+		<uib-tab active="tabs[2].active" heading="Radni kalendar" ng-click="seeWorkSchedule()">
 			<div>
 				<ui-view></ui-view>
 			</div>
 		</uib-tab>
-		<uib-tab index="2" heading="Region restorana" ng-click="seeRestaurantRegion()">
+		<uib-tab active="tabs[3].active" heading="Region restorana" ng-click="seeRestaurantRegion()">
 			<div>
 				<ui-view></ui-view>
 			</div>
 		</uib-tab>
-		<uib-tab index="3" heading="Porudžbine" ng-click="seeOrders()">
+		<uib-tab active="tabs[4].active" heading="Porudžbine" ng-click="seeOrders()">
 			<div>
 				<ui-view></ui-view>
 			</div>
