--- a/src/main/resources/static/pages/chef/profile.html
+++ b/src/main/resources/static/pages/chef/profile.html
@@ -18,17 +18,17 @@
 	<div ng-controller="chefProfileController">
 	
 	<uib-tabset justified="false" class="tabs">
-		<uib-tab index="0" heading="Početna" ng-click="home()">
+		<uib-tab active="tabs[0].active" heading="Početna" ng-click="home()">
 			<div>
 				<ui-view></ui-view>
 			</div>
 		</uib-tab>
-		<uib-tab index="1" heading="Radni kalendar" ng-click="seeWorkSchedule()">
+		<uib-tab active="tabs[1].active" heading="Radni kalendar" ng-click="seeWorkSchedule()">
 			<div>
 				<ui-view></ui-view>
 			</div>
 		</uib-tab>
-		<uib-tab index="2" heading="Porudžbine" ng-click="seeOrders()">
+		<uib-tab active="tabs[2].active" heading="Porudžbine" ng-click="seeOrders()">
 			<div>
 				<ui-view></ui-view>
 			</div>
