--- a/src/main/resources/static/pages/sysmanager/profile.html
+++ b/src/main/resources/static/pages/sysmanager/profile.html
@@ -40,6 +40,7 @@
 				<ui-view></ui-view>
 			</div>
 		</uib-tab>
+		<button type="button" class="btn btn-warning pull-right" ng-click="logout()">Odjavi me</button>
 	</uib-tabset>
 	
 	</div>
