Waiter change PW.

--- a/src/main/resources/static/pages/bartender/home.html
+++ b/src/main/resources/static/pages/bartender/home.html
@@ -6,7 +6,7 @@
 
     <form novalidate name="registerForm">
         
-        <h4 class="text-center">Profil konobara</h4>
+        <h4 class="text-center">Profil šankera</h4>
         
     	<div class="form-group">
             <label for="inputBartenderName">Ime</label>
