--- a/src/main/resources/static/pages/waiter/profile.html
+++ b/src/main/resources/static/pages/waiter/profile.html
@@ -18,7 +18,7 @@
 <div>
 	<div ng-controller="waiterProfileController">
 	
-	<uib-tabset justified="false" class="tabs">
+	<uib-tabset justified="true" class="tabs">
 		<uib-tab active="tabs[0].active" heading="Početna" ng-click="home()">
 			<div>
 				<ui-view></ui-view>
@@ -39,7 +39,7 @@
 				<ui-view></ui-view>
 			</div>
 		</uib-tab>
-		
+		<button type="button" class="btn btn-warning pull-right" ng-click="logout()">Odjavi me</button>
 	</uib-tabset>
 	
 	</div>
