Minor fixes - table layout in progress.

--- a/src/main/resources/static/pages/manager/profile.html
+++ b/src/main/resources/static/pages/manager/profile.html
@@ -81,7 +81,7 @@
 						   	</div>
 						    <div class="form-group">
 						   		<label for="newTableArea">Segment u kojem se nalazi</label>
-						       	<select class="form-control" id="newTableArea" ng-model="table.areaId">
+						       	<select class="form-control" id="newTableArea" ng-model="table.area">
 						       		<option ng-repeat="area in areas track by $index" value="{{area.id}}">{{area.name}}</option>
 						       	</select>
 						   	</div>
