--- a/src/main/resources/static/pages/manager/setLayout.html
+++ b/src/main/resources/static/pages/manager/setLayout.html
@@ -70,7 +70,7 @@
 		      	</div>
 		      	<div class="form-group">
 		            <label for="modifyTableArea">Segment u kojem se nalazi</label>
-		            <select class="form-control" id="modifyTableArea" ng-model="table.areaId" ng-options="area.name for area in areas"></select>
+		            <select class="form-control" id="modifyTableArea" ng-model="table.area" ng-options="area.name for area in areas"></select>
 		        </div>
 
     		</form>
