--- a/src/main/resources/static/pages/manager/setLayout.html
+++ b/src/main/resources/static/pages/manager/setLayout.html
@@ -3,7 +3,7 @@
 	
 		<div class="col-md-7 col-lg-7 form" style="overflow-x: scroll; overflow-y: scroll;">
 			<h4>Raspored stolova</h4>
-			<canvas id="restaurant_layout" width="700" height="500" style="background-color: #d0d5dd;"></canvas>
+			<canvas id="restaurant_canvas" width="700" height="500"></canvas>
 		</div>
 		
 		<div class="col-md-5 col-lg-5 form">
@@ -43,7 +43,7 @@
 	<div class="row">
 		<div class="col-md-7 col-lg-7">
 			<div class="col-md-4 col-lg-4">
-				<button type="button" class="btn btn-primary btn-block" ng-click="startCreateTable()">Dodaj sto</button>
+				<button type="button" class="btn btn-primary btn-block" ng-click="addTable()">Dodaj sto</button>
 			</div>
 			<div class="col-md-4 col-lg-4">
 				<button type="button" class="btn btn-success btn-block" ng-click="saveLayout()">Sačuvaj sve izmene</button>
@@ -70,7 +70,7 @@
 		      	</div>
 		      	<div class="form-group">
 		            <label for="modifyTableArea">Segment u kojem se nalazi</label>
-		            <select class="form-control" id="modifyTableArea" ng-model="table.area" ng-options="area.name for area in areas"></select>
+		            <select class="form-control" id="modifyTableArea" ng-model="table.area" ng-options="area.name for area in areas track by area.id"></select>
 		        </div>
 
     		</form>
@@ -83,3 +83,37 @@
 	
 </div>
 
+
+<!-- Modal -->
+<div class="modal fade" id="newTableModal" tabindex="-1" role="dialog" aria-labelledby="newTableModalLabel">
+	  <div class="modal-dialog" role="document">
+		    <div class="modal-content">
+			      <div class="modal-header">
+				        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				        <h4 class="modal-title" id="myModalLabel">Novi sto</h4>
+			      </div>
+			      <div class="modal-body">
+					<form novalidate name="newTableForm">
+						<div class="form-group">
+							<label for="newTableName">Naziv</label>
+							<input type="text" required ng-model="table.name" required id="newTableName" class="form-control" placeholder="Separe 2" required>
+						</div>
+						<div class="form-group">
+							<label for="newTableCapacity">Broj mesta</label>
+							<input type="number" required ng-model="table.seats" required id="newTableCapacity" class="form-control" placeholder="5" required>
+						</div>
+						<div class="form-group">
+							<label for="newTableArea">Segment u kojem se nalazi</label>
+							<select class="form-control" id="newTableArea" ng-model="table.area">
+								<option ng-repeat="area in areas track by $index" value="{{area.id}}">{{area.name}}</option>
+							</select>
+						</div>
+					</form>
+			      </div>
+			      <div class="modal-footer">
+				        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="cancelTable()">Odustani</button>
+				        <button type="button" class="btn btn-success" ng-click="createTable()">Dodaj novi sto</button>
+			      </div>
+		    </div>
+	  </div>
+</div>
