--- a/src/main/resources/static/pages/manager/profile.html
+++ b/src/main/resources/static/pages/manager/profile.html
@@ -78,7 +78,7 @@ CANVAS NE RADI, MODAL NE RADI KAD SE OVAKO RADI I KAD JE UGNJEŽĐENO U UI-VIEW!
 	        <li id="li9"><a ng-class="{ active: activePageNumber == 8}" ng-click="addBidder()">Registruj ponuđača</a></li>
 	        <li id="li10"><a ng-class="{ active: activePageNumber == 9}" ng-click="report()">Izveštaj</a></li>
 	    </ul>
-	    <button type="button" class="btn btn-warning navbar-btn">Odjava</button>
+	    <button type="button" class="btn btn-warning navbar-btn pull-right" ng-click="logout()">Odjava</button>
 	</div>
 
     <div>
