Full Calendar import fix. Restaurant manager shifts. (srećno Borise!)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,10 @@
     <script src="libs/ui-bootstrap-tpls-2.5.0.min.js"></script>
     
     <!-- Calendar -->
+    <script src="libs/moment.min.js"></script>
     <link href="css/fullcalendar.css" rel='stylesheet' />
+    <script src="libs/fullcalendar.min.js"></script>
+    
     <!-- https://angular-ui.github.io/bootstrap/ -->
     <style>
     	.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
