--- a/src/main/resources/static/pages/manager/setTimetable.html
+++ b/src/main/resources/static/pages/manager/setTimetable.html
@@ -1,1 +1,15 @@
-<h2>TIMETABLES</h2>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-md-7 col-lg-7 form">
+			<h4>Raspored smena</h4>
+			<div id="timetable">
+			</div>
+		</div>
+		
+		<div class="col-md-5 col-lg-5 form">
+			<h4>Zaposleni</h4>
+			
+		</div>
+	</div>
+	
+</div>
