Updated calendar resources and imports.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,9 +27,11 @@
     <script src="libs/ui-bootstrap-tpls-2.5.0.min.js"></script>
     
     <!-- Calendar -->
-    <script src="libs/moment.min.js"></script>
-    <link href="css/fullcalendar.css" rel='stylesheet' />
-    <script src="libs/fullcalendar.min.js"></script>
+    <script src="libs/fullcalendar/lib/moment.min.js"></script>
+    <link href="libs/fullcalendar/fullcalendar.css" rel='stylesheet' />
+    <script src="libs/fullcalendar/fullcalendar.min.js"></script>
+    <script src="libs/fullcalendar/gcal.min.js"></script>
+    <script src="libs/fullcalendar/locale-all.min.js"></script>
     
     <!-- https://angular-ui.github.io/bootstrap/ -->
     <style>
